--- a/vlibtour-bikestation/pom.xml
+++ b/vlibtour-bikestation/pom.xml
@@ -53,6 +53,14 @@ Contributor(s): Denis Conan
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    
+      <!-- Use Jackson library. -->
+    
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.0</version>
+  </dependency>
   </dependencies>
   
   <build>
