--- a/vlibtour-bikestation/src/main/resources/rest.properties
+++ b/vlibtour-bikestation/src/main/resources/rest.properties
@@ -2,5 +2,5 @@ jcdecaux.rooturl=https://api.jcdecaux.com/vls/v1
 #jcdecaux.rooturl=http://127.0.0.1:8888/ pb côté serveur
 
 jcdecaux.rooturl=http://localhost:8888/MyServer/
-jcdecaux.contract=paris
-jcdecaux.apiKey=91f170cdabb4c3227116c3e871a63e8d3ad148ee
+jcdecaux.contract=lyon
+jcdecaux.apiKey=53e15d3779d1c15af0f8a4137a7bbccc2e04f0e0
