--- a/vlibtour-client/vlibtour-admin-client-tour-management/pom.xml
+++ b/vlibtour-client/vlibtour-admin-client-tour-management/pom.xml
@@ -57,5 +57,11 @@ Contributor(s):
       <groupId>org.glassfish.main.appclient</groupId>
       <artifactId>gf-client</artifactId>
     </dependency>
+    
+    <dependency>
+   <groupId>com.rabbitmq</groupId>
+   <artifactId>http-client</artifactId>
+   <version>2.1.0.RELEASE</version>
+</dependency>
   </dependencies>
 </project>
