--- a/vlibtour-bikestation/src/main/resources/rest.properties
+++ b/vlibtour-bikestation/src/main/resources/rest.properties
@@ -2,7 +2,7 @@ jcdecaux.rooturl=https://api.jcdecaux.com/vls/v1
 #jcdecaux.rooturl=http://127.0.0.1:8888/ pb côté serveur
 
 
-emulated.server=http://localhost:8888/MyServer
+emulated.server=http://localhost:8888/MyServer/
 
 #jcdecaux.rooturl=http://localhost:8888/MyServer/
 
