--- a/vlibtour-bikestation/pom.xml
+++ b/vlibtour-bikestation/pom.xml
@@ -49,17 +49,22 @@ Contributor(s): Denis Conan
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 
 	 for ToStringBuilder -->
     <!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
-<dependency>
-    <groupId>io.rest-assured</groupId>
-    <artifactId>json-path</artifactId>
-    <version>3.1.1</version>
-</dependency>
-    
+	<dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>json-path</artifactId>
+      <version>3.1.1</version>
+	</dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    <dependency>
+      <groupId>eu.telecomsudparis.vlibtour.libraries-for-vlibtour</groupId>
+      <artifactId>vlibtour-visit-emulation</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
+  
   
   <build>
     <plugins>
