--- a/vlibtour-tour-management/vlibtour-tour-management-entity/pom.xml
+++ b/vlibtour-tour-management/vlibtour-tour-management-entity/pom.xml
@@ -30,4 +30,12 @@ Contributor(s):
   <artifactId>vlibtour-tour-management-entity</artifactId>
   <packaging>jar</packaging>
   <name>vlibtour-tour-management-entity: the VLibTour Tour Management entity</name>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>eu.telecomsudparis.vlibtour.libraries-for-vlibtour</groupId>
+  		<artifactId>vlibtour-visit-emulation</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
