--- a/vlibtour-client/vlibtour-client-group-communication-system/pom.xml
+++ b/vlibtour-client/vlibtour-client-group-communication-system/pom.xml
@@ -71,5 +71,10 @@ Contributor(s):
       <groupId>org.passay</groupId>
       <artifactId>passay</artifactId>
     </dependency>
+    <dependency>
+     <groupId>eu.telecomsudparis.vlibtour.vlibtour-lobby-room-system</groupId>
+ 	 <artifactId>vlibtour-lobby-room-server</artifactId>
+ 	 <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
