--- a/vlibtour-client/vlibtour-admin-client-tour-management/pom.xml
+++ b/vlibtour-client/vlibtour-admin-client-tour-management/pom.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 This file is part of the course CSC5002.
-
 The course material is free software: you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
-
 The course material is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
-
 You should have received a copy of the GNU Lesser General Public License
 along with the course CSC5002.  If not, see <http://www.gnu.org/licenses/>.
-
 Initial developer(s): Denis Conan
 Contributor(s):
 -->
@@ -42,6 +38,11 @@ Contributor(s):
       <groupId>eu.telecomsudparis.vlibtour.vlibtour-tour-management</groupId>
       <artifactId>vlibtour-tour-management-api</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>eu.telecomsudparis.vlibtour.vlibtour-client</groupId>
+ 		 <artifactId>vlibtour-client-group-communication-system</artifactId>
+ 		<version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax</groupId>
